--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -26,6 +26,7 @@ jobs:
             -o vendor/assets/javascript/slimselect.min.js
           curl https://ga.jspm.io/npm:slim-select@${VERSION}/dist/slimselect.css \
             -o vendor/assets/stylesheets/slimselect.css
+          VERSION="1.${VERSION}"
           sed -i "s/  VERSION = .*$/  VERSION = \"${VERSION}\"/" lib/slim_select_rails/version.rb
           git config --global user.name "Automated Release"
           git config --global user.email "tsvallender@users.noreply.github.com"
